--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
 <br><br>
 The rapid growth in the number of people cosplaying as a hobby since 1990 has made the phenomenon a significant aspect of popular culture in Japan and some other parts of Asia and in the Western world. Cosplay events are common features of fan conventions and there are also dedicated conventions and local and international competitions, as well as social networks, websites and other forms of media centered on cosplay activities.
 <br><br>
-Reproduced from <a href="https://en.wikipedia.org/wiki/Cosplay">https://en.wikipedia.org/wiki/Cosplay</a></p>
+Reproduced from: <a href="https://en.wikipedia.org/wiki/Cosplay">https://en.wikipedia.org/wiki/Cosplay</a></p>
 </div>
 </div>
 <!-- InstanceEndEditable --><!-- InstanceBeginEditable name="footer" -->
