--- a/costume.html
+++ b/costume.html
@@ -52,7 +52,7 @@
 </table>
 </div>
 <br><br>
-<h2>Several of our costumes are listed below in different collections, from the fun enthusiast to the hardcore CosPlayer !</h2>
+<h2><span>S</span>EVERAL OF OUR COSTUMES ARE LISTED BELOW IN DIFFERENT COLLECTIONS, FROM THE <span>F</span>UN <span>E</span>NTHUSIAST TO THE <span>H</span>ARDCORE <span>C</span>OSPLAYER <span>!</span></h2>
 <div class="wrapper" id="first">
 <h3><span>E</span>NTHUSIAST</h3>
 <p>(Your friend talks you into going to a CosPlay party and you have idea what to wear ? No worries, we've got you covered !)</p>
