--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 	<table>
 		<tbody>
     		<tr>  
-            	<td><img src="images/cossie1.jpg" width="250" height="50" alt=""/></td>      		
+            	<td><img src="images/cossie2.png" width="250" height="50" alt=""/></td>      		
             	<td><!-- InstanceBeginEditable name="header" -->
             	  <h1>CossiePlay</h1>
             	<!-- InstanceEndEditable --></td>
